Package_Tools/include-C/hdf5/serial/c/in_arbeit/h/H5Tpublic.h


typedef enum H5T_class_t {
    H5T_NO_CLASS  = -1, 
    H5T_INTEGER   = 0,  
    H5T_FLOAT     = 1,  
    H5T_TIME      = 2,  
    H5T_STRING    = 3,  
    H5T_BITFIELD  = 4,  
    H5T_OPAQUE    = 5,  
    H5T_COMPOUND  = 6,  
    H5T_REFERENCE = 7,  
    H5T_ENUM      = 8,  
    H5T_VLEN      = 9,  
    H5T_ARRAY     = 10, 
    H5T_NCLASSES 
} H5T_class_t;
typedef enum H5T_order_t {
    H5T_ORDER_ERROR = -1, 
    H5T_ORDER_LE    = 0,  
    H5T_ORDER_BE    = 1,  
    H5T_ORDER_VAX   = 2,  
    H5T_ORDER_MIXED = 3,  
    H5T_ORDER_NONE  = 4   
} H5T_order_t;
typedef enum H5T_sign_t {
    H5T_SGN_ERROR = -1, 
    H5T_SGN_NONE  = 0,  
    H5T_SGN_2     = 1,  
    H5T_NSGN = 2 
} H5T_sign_t;
typedef enum H5T_norm_t {
    H5T_NORM_ERROR   = -1, 
    H5T_NORM_IMPLIED = 0,  
    H5T_NORM_MSBSET  = 1,  
    H5T_NORM_NONE    = 2   
} H5T_norm_t;
typedef enum H5T_cset_t {
    H5T_CSET_ERROR       = -1, 
    H5T_CSET_ASCII       = 0,  
    H5T_CSET_UTF8        = 1,  
    H5T_CSET_RESERVED_2  = 2,  
    H5T_CSET_RESERVED_3  = 3,  
    H5T_CSET_RESERVED_4  = 4,  
    H5T_CSET_RESERVED_5  = 5,  
    H5T_CSET_RESERVED_6  = 6,  
    H5T_CSET_RESERVED_7  = 7,  
    H5T_CSET_RESERVED_8  = 8,  
    H5T_CSET_RESERVED_9  = 9,  
    H5T_CSET_RESERVED_10 = 10, 
    H5T_CSET_RESERVED_11 = 11, 
    H5T_CSET_RESERVED_12 = 12, 
    H5T_CSET_RESERVED_13 = 13, 
    H5T_CSET_RESERVED_14 = 14, 
    H5T_CSET_RESERVED_15 = 15  
} H5T_cset_t;
typedef enum H5T_str_t {
    H5T_STR_ERROR       = -1, 
    H5T_STR_NULLTERM    = 0,  
    H5T_STR_NULLPAD     = 1,  
    H5T_STR_SPACEPAD    = 2,  
    H5T_STR_RESERVED_3  = 3,  
    H5T_STR_RESERVED_4  = 4,  
    H5T_STR_RESERVED_5  = 5,  
    H5T_STR_RESERVED_6  = 6,  
    H5T_STR_RESERVED_7  = 7,  
    H5T_STR_RESERVED_8  = 8,  
    H5T_STR_RESERVED_9  = 9,  
    H5T_STR_RESERVED_10 = 10, 
    H5T_STR_RESERVED_11 = 11, 
    H5T_STR_RESERVED_12 = 12, 
    H5T_STR_RESERVED_13 = 13, 
    H5T_STR_RESERVED_14 = 14, 
    H5T_STR_RESERVED_15 = 15  
} H5T_str_t;
typedef enum H5T_pad_t {
    H5T_PAD_ERROR      = -1, 
    H5T_PAD_ZERO       = 0,  
    H5T_PAD_ONE        = 1,  
    H5T_PAD_BACKGROUND = 2,  
    H5T_NPAD = 3 
} H5T_pad_t;
typedef struct H5T_cdata_t {
    H5T_cmd_t command;  
    H5T_bkg_t need_bkg; 
    hbool_t   recalc;   
    void     *priv;     
} H5T_cdata_t;
typedef enum H5T_pers_t {
    H5T_PERS_DONTCARE = -1, 
    H5T_PERS_HARD     = 0,  
    H5T_PERS_SOFT     = 1   
} H5T_pers_t;
typedef enum H5T_direction_t {
    H5T_DIR_DEFAULT = 0, 
    H5T_DIR_ASCEND  = 1, 
    H5T_DIR_DESCEND = 2  
} H5T_direction_t;
typedef herr_t (*H5T_conv_t)(hid_t src_id, hid_t dst_id, H5T_cdata_t *cdata, size_t nelmts, size_t buf_stride,
                             size_t bkg_stride, void *buf, void *bkg, hid_t dset_xfer_plist);
extern hid_t H5Tcreate(H5T_class_t type, size_t size);
extern hid_t H5Tcopy(hid_t type_id);
extern herr_t H5Tclose(hid_t type_id);
extern htri_t H5Tequal(hid_t type1_id, hid_t type2_id);
extern herr_t H5Tlock(hid_t type_id);
extern herr_t H5Tcommit2(hid_t loc_id, const char *name, hid_t type_id, hid_t lcpl_id, hid_t tcpl_id,
                         hid_t tapl_id);
extern hid_t H5Topen2(hid_t loc_id, const char *name, hid_t tapl_id);
extern herr_t H5Tcommit_anon(hid_t loc_id, hid_t type_id, hid_t tcpl_id, hid_t tapl_id);
extern hid_t H5Tget_create_plist(hid_t type_id);
extern htri_t H5Tcommitted(hid_t type_id);
extern herr_t H5Tencode(hid_t obj_id, void *buf, size_t *nalloc);
extern hid_t H5Tdecode(const void *buf);
extern herr_t H5Tflush(hid_t type_id);
extern herr_t H5Trefresh(hid_t type_id);
extern herr_t H5Tinsert(hid_t parent_id, const char *name, size_t offset, hid_t member_id);
extern herr_t H5Tpack(hid_t type_id);
extern hid_t H5Tenum_create(hid_t base_id);
extern herr_t H5Tenum_insert(hid_t type, const char *name, const void *value);
extern herr_t H5Tenum_nameof(hid_t type, const void *value, char *name , size_t size);
extern herr_t H5Tenum_valueof(hid_t type, const char *name, void *value );
extern hid_t H5Tvlen_create(hid_t base_id);
extern hid_t H5Tarray_create2(hid_t base_id, unsigned ndims, const hsize_t dim[]);
extern int H5Tget_array_ndims(hid_t type_id);
extern int H5Tget_array_dims2(hid_t type_id, hsize_t dims[]);
extern herr_t H5Tset_tag(hid_t type, const char *tag);
extern char *H5Tget_tag(hid_t type);
extern hid_t H5Tget_super(hid_t type);
extern H5T_class_t H5Tget_class(hid_t type_id);
extern htri_t H5Tdetect_class(hid_t type_id, H5T_class_t cls);
extern size_t H5Tget_size(hid_t type_id);
extern H5T_order_t H5Tget_order(hid_t type_id);
extern size_t H5Tget_precision(hid_t type_id);
extern int H5Tget_offset(hid_t type_id);
extern herr_t H5Tget_pad(hid_t type_id, H5T_pad_t *lsb , H5T_pad_t *msb );
extern H5T_sign_t H5Tget_sign(hid_t type_id);
extern herr_t H5Tget_fields(hid_t type_id, size_t *spos , size_t *epos , size_t *esize ,
                            size_t *mpos , size_t *msize );
extern size_t H5Tget_ebias(hid_t type_id);
extern H5T_norm_t H5Tget_norm(hid_t type_id);
extern H5T_pad_t H5Tget_inpad(hid_t type_id);
extern H5T_str_t H5Tget_strpad(hid_t type_id);
extern int H5Tget_nmembers(hid_t type_id);
extern char *H5Tget_member_name(hid_t type_id, unsigned membno);
extern int H5Tget_member_index(hid_t type_id, const char *name);
extern size_t H5Tget_member_offset(hid_t type_id, unsigned membno);
extern H5T_class_t H5Tget_member_class(hid_t type_id, unsigned membno);
extern hid_t H5Tget_member_type(hid_t type_id, unsigned membno);
extern herr_t H5Tget_member_value(hid_t type_id, unsigned membno, void *value );
extern H5T_cset_t H5Tget_cset(hid_t type_id);
extern htri_t H5Tis_variable_str(hid_t type_id);
extern hid_t H5Tget_native_type(hid_t type_id, H5T_direction_t direction);
extern herr_t H5Tset_size(hid_t type_id, size_t size);
extern herr_t H5Tset_order(hid_t type_id, H5T_order_t order);
extern herr_t H5Tset_precision(hid_t type_id, size_t prec);
extern herr_t H5Tset_offset(hid_t type_id, size_t offset);
extern herr_t H5Tset_pad(hid_t type_id, H5T_pad_t lsb, H5T_pad_t msb);
extern herr_t H5Tset_sign(hid_t type_id, H5T_sign_t sign);
extern herr_t H5Tset_fields(hid_t type_id, size_t spos, size_t epos, size_t esize, size_t mpos, size_t msize);
extern herr_t H5Tset_ebias(hid_t type_id, size_t ebias);
extern herr_t H5Tset_norm(hid_t type_id, H5T_norm_t norm);
extern herr_t H5Tset_inpad(hid_t type_id, H5T_pad_t pad);
extern herr_t H5Tset_cset(hid_t type_id, H5T_cset_t cset);
extern herr_t H5Tset_strpad(hid_t type_id, H5T_str_t strpad);
extern herr_t H5Tregister(H5T_pers_t pers, const char *name, hid_t src_id, hid_t dst_id, H5T_conv_t func);
extern herr_t H5Tunregister(H5T_pers_t pers, const char *name, hid_t src_id, hid_t dst_id, H5T_conv_t func);
extern H5T_conv_t H5Tfind(hid_t src_id, hid_t dst_id, H5T_cdata_t **pcdata);
extern htri_t H5Tcompiler_conv(hid_t src_id, hid_t dst_id);
extern herr_t H5Tconvert(hid_t src_id, hid_t dst_id, size_t nelmts, void *buf, void *background,
                         hid_t plist_id);
extern herr_t H5Tcommit1(hid_t loc_id, const char *name, hid_t type_id);
extern hid_t H5Topen1(hid_t loc_id, const char *name);
extern hid_t H5Tarray_create1(hid_t base_id, int ndims, const hsize_t dim[],
                              const int perm[]);
extern int H5Tget_array_dims1(hid_t type_id, hsize_t dims[], int perm[]);