Packages_2024/hdf5_1.10.10/hdf5/H5Tpublic.inc


function H5Tcreate(_type: TH5T_class_t; size: Tsize_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tcopy(type_id: Thid_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tclose(type_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tequal(type1_id: Thid_t; type2_id: Thid_t): Thtri_t; cdecl; external libhdf5_serial;
function H5Tlock(type_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tcommit2(loc_id: Thid_t; name: pchar; type_id: Thid_t; lcpl_id: Thid_t; tcpl_id: Thid_t;
  tapl_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Topen2(loc_id: Thid_t; name: pchar; tapl_id: Thid_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tcommit_anon(loc_id: Thid_t; type_id: Thid_t; tcpl_id: Thid_t; tapl_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tget_create_plist(type_id: Thid_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tcommitted(type_id: Thid_t): Thtri_t; cdecl; external libhdf5_serial;
function H5Tencode(obj_id: Thid_t; buf: pointer; nalloc: Psize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tdecode(buf: pointer): Thid_t; cdecl; external libhdf5_serial;
function H5Tflush(type_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Trefresh(type_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tinsert(parent_id: Thid_t; name: pchar; offset: Tsize_t; member_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tpack(type_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tenum_create(base_id: Thid_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tenum_insert(_type: Thid_t; name: pchar; value: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Tenum_nameof(_type: Thid_t; value: pointer; name: pchar; size: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tenum_valueof(_type: Thid_t; name: pchar; value: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Tvlen_create(base_id: Thid_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tarray_create2(base_id: Thid_t; ndims: dword; dim: Phsize_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tget_array_ndims(type_id: Thid_t): longint; cdecl; external libhdf5_serial;
function H5Tget_array_dims2(type_id: Thid_t; dims: Phsize_t): longint; cdecl; external libhdf5_serial;
function H5Tset_tag(_type: Thid_t; tag: pchar): Therr_t; cdecl; external libhdf5_serial;
function H5Tget_tag(_type: Thid_t): pchar; cdecl; external libhdf5_serial;
function H5Tget_super(_type: Thid_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tget_class(type_id: Thid_t): TH5T_class_t; cdecl; external libhdf5_serial;
function H5Tdetect_class(type_id: Thid_t; cls: TH5T_class_t): Thtri_t; cdecl; external libhdf5_serial;
function H5Tget_size(type_id: Thid_t): Tsize_t; cdecl; external libhdf5_serial;
function H5Tget_order(type_id: Thid_t): TH5T_order_t; cdecl; external libhdf5_serial;
function H5Tget_precision(type_id: Thid_t): Tsize_t; cdecl; external libhdf5_serial;
function H5Tget_offset(type_id: Thid_t): longint; cdecl; external libhdf5_serial;
function H5Tget_pad(type_id: Thid_t; lsb: PH5T_pad_t; msb: PH5T_pad_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tget_sign(type_id: Thid_t): TH5T_sign_t; cdecl; external libhdf5_serial;
function H5Tget_fields(type_id: Thid_t; spos: Psize_t; epos: Psize_t; esize: Psize_t; mpos: Psize_t; msize: Psize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tget_ebias(type_id: Thid_t): Tsize_t; cdecl; external libhdf5_serial;
function H5Tget_norm(type_id: Thid_t): TH5T_norm_t; cdecl; external libhdf5_serial;
function H5Tget_inpad(type_id: Thid_t): TH5T_pad_t; cdecl; external libhdf5_serial;
function H5Tget_strpad(type_id: Thid_t): TH5T_str_t; cdecl; external libhdf5_serial;
function H5Tget_nmembers(type_id: Thid_t): longint; cdecl; external libhdf5_serial;
function H5Tget_member_name(type_id: Thid_t; membno: dword): pchar; cdecl; external libhdf5_serial;
function H5Tget_member_index(type_id: Thid_t; name: pchar): longint; cdecl; external libhdf5_serial;
function H5Tget_member_offset(type_id: Thid_t; membno: dword): Tsize_t; cdecl; external libhdf5_serial;
function H5Tget_member_class(type_id: Thid_t; membno: dword): TH5T_class_t; cdecl; external libhdf5_serial;
function H5Tget_member_type(type_id: Thid_t; membno: dword): Thid_t; cdecl; external libhdf5_serial;
function H5Tget_member_value(type_id: Thid_t; membno: dword; value: pointer): Therr_t; cdecl; external libhdf5_serial;
function H5Tget_cset(type_id: Thid_t): TH5T_cset_t; cdecl; external libhdf5_serial;
function H5Tis_variable_str(type_id: Thid_t): Thtri_t; cdecl; external libhdf5_serial;
function H5Tget_native_type(type_id: Thid_t; direction: TH5T_direction_t): Thid_t; cdecl; external libhdf5_serial;
function H5Tset_size(type_id: Thid_t; size: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_order(type_id: Thid_t; order: TH5T_order_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_precision(type_id: Thid_t; prec: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_offset(type_id: Thid_t; offset: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_pad(type_id: Thid_t; lsb: TH5T_pad_t; msb: TH5T_pad_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_sign(type_id: Thid_t; sign: TH5T_sign_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_fields(type_id: Thid_t; spos: Tsize_t; epos: Tsize_t; esize: Tsize_t; mpos: Tsize_t;
  msize: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_ebias(type_id: Thid_t; ebias: Tsize_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_norm(type_id: Thid_t; norm: TH5T_norm_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_inpad(type_id: Thid_t; pad: TH5T_pad_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_cset(type_id: Thid_t; cset: TH5T_cset_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tset_strpad(type_id: Thid_t; strpad: TH5T_str_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tregister(pers: TH5T_pers_t; name: pchar; src_id: Thid_t; dst_id: Thid_t; func: TH5T_conv_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tunregister(pers: TH5T_pers_t; name: pchar; src_id: Thid_t; dst_id: Thid_t; func: TH5T_conv_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tfind(src_id: Thid_t; dst_id: Thid_t; pcdata: PPH5T_cdata_t): TH5T_conv_t; cdecl; external libhdf5_serial;
function H5Tcompiler_conv(src_id: Thid_t; dst_id: Thid_t): Thtri_t; cdecl; external libhdf5_serial;
function H5Tconvert(src_id: Thid_t; dst_id: Thid_t; nelmts: Tsize_t; buf: pointer; background: pointer;
  plist_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Tcommit1(loc_id: Thid_t; name: pchar; type_id: Thid_t): Therr_t; cdecl; external libhdf5_serial;
function H5Topen1(loc_id: Thid_t; name: pchar): Thid_t; cdecl; external libhdf5_serial;
function H5Tarray_create1(base_id: Thid_t; ndims: longint; dim: Phsize_t; perm: Plongint): Thid_t; cdecl; external libhdf5_serial;
function H5Tget_array_dims1(type_id: Thid_t; dims: Phsize_t; perm: Plongint): longint; cdecl; external libhdf5_serial;

// === Konventiert am: 21-8-26 14:40:04 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}

{$ENDIF read_implementation}
